Add probing experiment script

--- a/cls_probing_distillbert.ipynb
+++ b/cls_probing_distillbert.ipynb
@@ -33,7 +33,9 @@
     "import torch.utils\n",
     "import torch.utils.data\n",
     "import fine_tune\n",
-    "from tqdm import tqdm"
+    "from tqdm import tqdm\n",
+    "from transformers import (DistilBertForSequenceClassification,\n",
+    "                          DistilBertTokenizer)"
    ]
   },
   {
@@ -42,17 +44,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "TASK = 'sst2'\n",
-    "TEACHER_EXP = 'bert_base_teacher'\n",
+    "TASK = 'qnli'\n",
+    "TEACHER_EXP = 'teacher_base'\n",
     "TMODEL = 'bert'\n",
-    "TCKPT = 6315\n",
-    "STUDENT_EXP = 'PKD_4'\n",
+    "TCKPT = 9822\n",
+    "STUDENT_EXP = 'distill_bert_base'\n",
     "SMODEL = 'bert'\n",
-    "SCKPT = 8420\n",
+    "SCKPT = 9000\n",
     "DATASET = 'train'\n",
     "SDEVICE = 0\n",
     "TDEVICE = 0\n",
-    "BATCH_SIZE = 1\n"
+    "BATCH_SIZE = 1"
    ]
   },
   {
@@ -64,7 +66,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "\n+---------------------------------------+\n| configuration     | value             |\n+---------------------------------------+\n| accum_step        | 1                 |\n| amp               | 0                 |\n| batch_size        | 32                |\n| beta1             | 0.9               |\n| beta2             | 0.999             |\n| ckpt_step         | 2105              |\n| dataset           | train             |\n| device_id         | 0                 |\n| dropout           | 0.1               |\n| eps               | 1e-08             |\n| experiment        | bert_base_teacher |\n| log_step          | 500               |\n| lr                | 3e-05             |\n| max_norm          | 1.0               |\n| max_seq_len       | 128               |\n| model             | bert              |\n| num_class         | 2                 |\n| ptrain_ver        | bert-base-uncased |\n| seed              | 42                |\n| task              | sst2              |\n| total_step        | 6315              |\n| warmup_step       | 2105              |\n| weight_decay      | 0.01              |\n+---------------------------------------+\n"
+      "\n+---------------------------------------+\n| configuration     | value             |\n+---------------------------------------+\n| accum_step        | 2                 |\n| amp               | 0                 |\n| batch_size        | 32                |\n| beta1             | 0.9               |\n| beta2             | 0.999             |\n| ckpt_step         | 1000              |\n| dataset           | train             |\n| device_id         | 0                 |\n| dropout           | 0.1               |\n| eps               | 1e-08             |\n| experiment        | teacher_base      |\n| log_step          | 500               |\n| lr                | 3e-05             |\n| max_norm          | 1.0               |\n| max_seq_len       | 128               |\n| model             | bert              |\n| num_class         | 2                 |\n| ptrain_ver        | bert-base-uncased |\n| seed              | 42                |\n| task              | qnli              |\n| total_step        | 9822              |\n| warmup_step       | 3274              |\n| weight_decay      | 0.01              |\n+---------------------------------------+\n"
      ]
     }
    ],
@@ -86,43 +88,12 @@
    "outputs": [
     {
      "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "\n+-------------------------------------------+\n| configuration       | value               |\n+-------------------------------------------+\n| accum_step          | 1                   |\n| amp                 | 0                   |\n| batch_size          | 32                  |\n| beta1               | 0.9                 |\n| beta2               | 0.999               |\n| ckpt_step           | 1000                |\n| d_emb               | 128                 |\n| d_ff                | 3072                |\n| d_model             | 768                 |\n| dataset             | train               |\n| device_id           | 0                   |\n| dropout             | 0.1                 |\n| eps                 | 1e-08               |\n| experiment          | PKD_4               |\n| log_step            | 100                 |\n| lr                  | 5e-05               |\n| max_norm            | 1.0                 |\n| max_seq_len         | 128                 |\n| model               | bert                |\n| num_attention_heads | 12                  |\n| num_class           | 2                   |\n| num_hidden_layers   | 6                   |\n| seed                | 42                  |\n| task                | sst2                |\n| total_step          | 8420                |\n| type_vocab_size     | 2                   |\n| warmup_step         | 842                 |\n| weight_decay        | 0.01                |\n+-------------------------------------------+\n"
-     ]
-    }
-   ],
-   "source": [
-    "student_config = fine_tune.config.StudentConfig.load(\n",
-    "    experiment=STUDENT_EXP,\n",
-    "    model=SMODEL,\n",
-    "    task=TASK\n",
-    ")\n",
-    "student_config.device_id = SDEVICE\n",
-    "student_config.dataset = DATASET\n",
-    "print(student_config)"
-   ]
-  },
-  {
-   "source": [
-    "# Use training dataset to find similarity between CLS embeddings"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
      "name": "stderr",
      "text": [
-      "2021/05/06 01:32:17 - INFO - fine_tune.task -   Start loading task SST2 dataset train.\n",
-      "Loading SST2 train: 67349it [00:00, 580855.40it/s]\n",
-      "2021/05/06 01:32:17 - INFO - fine_tune.task -   Number of samples: 67349\n",
-      "2021/05/06 01:32:17 - INFO - fine_tune.task -   Finish loading task SST2 dataset train.\n"
+      "2021/05/05 17:01:08 - INFO - fine_tune.task -   Start loading task QNLI dataset train.\n",
+      "Loading QNLI train: 104743it [00:00, 462141.77it/s]\n",
+      "2021/05/05 17:01:08 - INFO - fine_tune.task -   Number of samples: 104743\n",
+      "2021/05/05 17:01:08 - INFO - fine_tune.task -   Finish loading task QNLI dataset train.\n"
      ]
     }
    ],
@@ -134,28 +105,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "teacher_tknr = fine_tune.util.load_teacher_tokenizer_by_config(\n",
     "    config=teacher_config\n",
-    ")\n",
-    "student_tknr = fine_tune.util.load_student_tokenizer_by_config(\n",
-    "    config=student_config\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "/home/kychen/Desktop/BERT-gang/data/fine_tune_experiment/bert_base_teacher_bert_sst2\n"
+      "/home/kychen/Desktop/BERT-gang/data/fine_tune_experiment/teacher_base_bert_qnli\n"
      ]
     }
    ],
@@ -174,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -185,11 +153,10 @@
       ]
      },
      "metadata": {},
-     "execution_count": 8
+     "execution_count": 7
     }
    ],
    "source": [
-    "\n",
     "teacher_model = fine_tune.util.load_teacher_model_by_config(\n",
     "    config=teacher_config\n",
     ")\n",
@@ -203,6 +170,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "student_tknr = DistilBertTokenizer.from_pretrained('distilbert-base-uncased')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [
@@ -210,15 +186,15 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "/home/kychen/Desktop/BERT-gang/data/fine_tune_experiment/PKD_4_bert_sst2\n"
+      "/home/kychen/Desktop/BERT-gang/data/fine_tune_experiment/distill_bert_base_bert_qnli\n"
      ]
     }
    ],
    "source": [
     "STUDENT_EXP_NAME = fine_tune.config.BaseConfig.experiment_name(\n",
-    "    experiment=student_config.experiment,\n",
-    "    model=student_config.model,\n",
-    "    task=student_config.task\n",
+    "    experiment=STUDENT_EXP,\n",
+    "    model=SMODEL,\n",
+    "    task=TASK\n",
     ")\n",
     "STUDENT_EXP_DIR = os.path.join(\n",
     "    fine_tune.path.FINE_TUNE_EXPERIMENT,\n",
@@ -236,8 +212,11 @@
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "2021/05/06 01:32:27 - INFO - fine_tune.model.student_bert -   Load model state dict from pre-trained model\n",
-      "2021/05/06 01:32:27 - INFO - fine_tune.model.student_bert -   Finish initialization from pre-trained model\n"
+      "Some weights of the model checkpoint at distilbert-base-uncased were not used when initializing DistilBertForSequenceClassification: ['vocab_transform.weight', 'vocab_transform.bias', 'vocab_layer_norm.weight', 'vocab_layer_norm.bias', 'vocab_projector.weight', 'vocab_projector.bias']\n",
+      "- This IS expected if you are initializing DistilBertForSequenceClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPretraining model).\n",
+      "- This IS NOT expected if you are initializing DistilBertForSequenceClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
+      "Some weights of DistilBertForSequenceClassification were not initialized from the model checkpoint at distilbert-base-uncased and are newly initialized: ['pre_classifier.weight', 'pre_classifier.bias', 'classifier.weight', 'classifier.bias']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
      ]
     },
     {
@@ -252,14 +231,14 @@
     }
    ],
    "source": [
-    "student_model = fine_tune.util.load_student_model_by_config(\n",
-    "    config=student_config,\n",
-    "    tokenizer=student_tknr\n",
-    ")\n",
+    "student_model = DistilBertForSequenceClassification.from_pretrained(\n",
+    "    'distilbert-base-uncased',\n",
+    "    return_dict = True\n",
+    ").to(SDEVICE)\n",
     "student_model.load_state_dict(\n",
     "    torch.load(\n",
     "        os.path.join(STUDENT_EXP_DIR, f'model-{SCKPT}.pt'),\n",
-    "        map_location=student_config.device\n",
+    "        map_location=f'cuda:{SDEVICE}'\n",
     "    )\n",
     ")"
    ]
@@ -273,7 +252,7 @@
     "dataloader = torch.utils.data.DataLoader(\n",
     "    dataset,\n",
     "    collate_fn=dataset.create_collate_fn(),\n",
-    "    batch_size=BATCH_SIZE\n",
+    "    batch_size=1\n",
     ")"
    ]
   },
@@ -298,13 +277,15 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "100%|██████████| 67349/67349 [14:48<00:00, 75.83it/s]\n"
+      "100%|██████████| 104743/104743 [29:55<00:00, 58.33it/s]\n"
      ]
     }
    ],
@@ -328,27 +309,30 @@
     "        text=text,\n",
     "        text_pair=text_pair,\n",
     "        padding='max_length',\n",
-    "        max_length=student_config.max_seq_len,\n",
+    "        max_length=128,\n",
     "        return_tensors='pt',\n",
     "        truncation=True\n",
     "    )\n",
     "    student_input_ids = student_encode['input_ids']\n",
-    "    student_token_type_ids = student_encode['token_type_ids']\n",
     "    student_attention_mask = student_encode['attention_mask']\n",
     "\n",
-    "    _, t_cls = teacher_model(\n",
+    "    _, t_cls, _ = teacher_model(\n",
     "        input_ids = teacher_input_ids.to(teacher_config.device),\n",
     "        token_type_ids = teacher_token_type_ids.to(teacher_config.device),\n",
-    "        attention_mask = teacher_attention_mask.to(teacher_config.device)\n",
+    "        attention_mask = teacher_attention_mask.to(teacher_config.device),\n",
+    "        return_hidden_and_attn = True\n",
+    "    )\n",
+    "    t_cls = t_cls[-1][:,0,:]\n",
+    "\n",
+    "    output = student_model(\n",
+    "        input_ids = student_input_ids.to(f'cuda:{SDEVICE}'),\n",
+    "        attention_mask = student_attention_mask.to(f'cuda:{SDEVICE}'),\n",
+    "        output_hidden_states=True\n",
     "    )\n",
     "\n",
-    "    _, s_cls = student_model(\n",
-    "        input_ids = student_input_ids.to(student_config.device),\n",
-    "        token_type_ids = student_token_type_ids.to(student_config.device),\n",
-    "        attention_mask = student_attention_mask.to(student_config.device)\n",
-    "    )\n",
-    "\n",
-    "    if cosine_sim(t_cls.to(student_config.device), s_cls) < 0.5:\n",
+    "    s_cls = output.hidden_states[-1][:,0,:]\n",
+    "    \n",
+    "    if cosine_sim(t_cls.to(f'cuda:{SDEVICE}'), s_cls) < 0.5:\n",
     "        not_similar_list.append({'text':text, 'text_pair':text_pair, 'label': label})"
    ]
   },
@@ -361,7 +345,7 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "56007"
+       "104517"
       ]
      },
      "metadata": {},
@@ -381,7 +365,7 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "2097.449907000002"
+       "2677.9642810000005"
       ]
      },
      "metadata": {},
@@ -389,21 +373,7 @@
     }
    ],
    "source": [
-    "len(dataset) * (0.989164-0.958021)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import csv\n",
-    "with open(f'not_similar_qnli_{STUDENT_EXP}_{DATASET}.csv', 'w', newline='') as file:\n",
-    "    fc = csv.DictWriter(file, fieldnames=not_similar_list[0].keys())\n",
-    "    fc.writeheader()\n",
-    "    fc.writerows(not_similar_list)\n",
-    "    "
+    "len(dataset) * (0.989164-0.963597)"
    ]
   },
   {
