Implement WSL loss and training script

--- a/cls_probing.ipynb
+++ b/cls_probing.ipynb
@@ -42,13 +42,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "TASK = 'sst2'\n",
-    "TEACHER_EXP = 'bert_base_teacher'\n",
+    "TASK = 'qnli'\n",
+    "TEACHER_EXP = 'teacher_base'\n",
     "TMODEL = 'bert'\n",
-    "TCKPT = 6315\n",
-    "STUDENT_EXP = 'PKD_4'\n",
+    "TCKPT = 9822\n",
+    "STUDENT_EXP = 'MSE_init_from_pre_trained'\n",
     "SMODEL = 'bert'\n",
-    "SCKPT = 8420\n",
+    "SCKPT = 13096\n",
     "DATASET = 'train'\n",
     "SDEVICE = 0\n",
     "TDEVICE = 0\n",
@@ -64,7 +64,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "\n+---------------------------------------+\n| configuration     | value             |\n+---------------------------------------+\n| accum_step        | 1                 |\n| amp               | 0                 |\n| batch_size        | 32                |\n| beta1             | 0.9               |\n| beta2             | 0.999             |\n| ckpt_step         | 2105              |\n| dataset           | train             |\n| device_id         | 0                 |\n| dropout           | 0.1               |\n| eps               | 1e-08             |\n| experiment        | bert_base_teacher |\n| log_step          | 500               |\n| lr                | 3e-05             |\n| max_norm          | 1.0               |\n| max_seq_len       | 128               |\n| model             | bert              |\n| num_class         | 2                 |\n| ptrain_ver        | bert-base-uncased |\n| seed              | 42                |\n| task              | sst2              |\n| total_step        | 6315              |\n| warmup_step       | 2105              |\n| weight_decay      | 0.01              |\n+---------------------------------------+\n"
+      "\n+---------------------------------------+\n| configuration     | value             |\n+---------------------------------------+\n| accum_step        | 2                 |\n| amp               | 0                 |\n| batch_size        | 32                |\n| beta1             | 0.9               |\n| beta2             | 0.999             |\n| ckpt_step         | 1000              |\n| dataset           | train             |\n| device_id         | 0                 |\n| dropout           | 0.1               |\n| eps               | 1e-08             |\n| experiment        | teacher_base      |\n| log_step          | 500               |\n| lr                | 3e-05             |\n| max_norm          | 1.0               |\n| max_seq_len       | 128               |\n| model             | bert              |\n| num_class         | 2                 |\n| ptrain_ver        | bert-base-uncased |\n| seed              | 42                |\n| task              | qnli              |\n| total_step        | 9822              |\n| warmup_step       | 3274              |\n| weight_decay      | 0.01              |\n+---------------------------------------+\n"
      ]
     }
    ],
@@ -88,7 +88,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "\n+-------------------------------------------+\n| configuration       | value               |\n+-------------------------------------------+\n| accum_step          | 1                   |\n| amp                 | 0                   |\n| batch_size          | 32                  |\n| beta1               | 0.9                 |\n| beta2               | 0.999               |\n| ckpt_step           | 1000                |\n| d_emb               | 128                 |\n| d_ff                | 3072                |\n| d_model             | 768                 |\n| dataset             | train               |\n| device_id           | 0                   |\n| dropout             | 0.1                 |\n| eps                 | 1e-08               |\n| experiment          | PKD_4               |\n| log_step            | 100                 |\n| lr                  | 5e-05               |\n| max_norm            | 1.0                 |\n| max_seq_len         | 128                 |\n| model               | bert                |\n| num_attention_heads | 12                  |\n| num_class           | 2                   |\n| num_hidden_layers   | 6                   |\n| seed                | 42                  |\n| task                | sst2                |\n| total_step          | 8420                |\n| type_vocab_size     | 2                   |\n| warmup_step         | 842                 |\n| weight_decay        | 0.01                |\n+-------------------------------------------+\n"
+      "\n+-------------------------------------------+\n| configuration       | value               |\n+-------------------------------------------+\n| accum_step          | 2                   |\n| amp                 | 0                   |\n| batch_size          | 32                  |\n| beta1               | 0.9                 |\n| beta2               | 0.999               |\n| ckpt_step           | 2000                |\n| d_emb               | 128                 |\n| d_ff                | 3072                |\n| d_model             | 768                 |\n| dataset             | train               |\n| device_id           | 0                   |\n| dropout             | 0.1                 |\n| eps                 | 1e-08               |\n| experiment          | Contrast_by_sample  |\n| log_step            | 100                 |\n| lr                  | 3e-05               |\n| max_norm            | 1.0                 |\n| max_seq_len         | 128                 |\n| model               | bert                |\n| num_attention_heads | 12                  |\n| num_class           | 2                   |\n| num_hidden_layers   | 6                   |\n| seed                | 42                  |\n| task                | qnli                |\n| total_step          | 26192               |\n| type_vocab_size     | 2                   |\n| warmup_step         | 2619                |\n| weight_decay        | 0.01                |\n+-------------------------------------------+\n"
      ]
     }
    ],
@@ -119,10 +119,10 @@
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "2021/05/06 01:32:17 - INFO - fine_tune.task -   Start loading task SST2 dataset train.\n",
-      "Loading SST2 train: 67349it [00:00, 580855.40it/s]\n",
-      "2021/05/06 01:32:17 - INFO - fine_tune.task -   Number of samples: 67349\n",
-      "2021/05/06 01:32:17 - INFO - fine_tune.task -   Finish loading task SST2 dataset train.\n"
+      "2021/05/07 15:32:15 - INFO - fine_tune.task -   Start loading task QNLI dataset train.\n",
+      "Loading QNLI train: 104743it [00:00, 472977.26it/s]\n",
+      "2021/05/07 15:32:15 - INFO - fine_tune.task -   Number of samples: 104743\n",
+      "2021/05/07 15:32:15 - INFO - fine_tune.task -   Finish loading task QNLI dataset train.\n"
      ]
     }
    ],
@@ -155,7 +155,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "/home/kychen/Desktop/BERT-gang/data/fine_tune_experiment/bert_base_teacher_bert_sst2\n"
+      "/home/kychen/Desktop/BERT-gang/data/fine_tune_experiment/teacher_base_bert_qnli\n"
      ]
     }
    ],
@@ -210,7 +210,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "/home/kychen/Desktop/BERT-gang/data/fine_tune_experiment/PKD_4_bert_sst2\n"
+      "/home/kychen/Desktop/BERT-gang/data/fine_tune_experiment/Contrast_by_sample_bert_qnli\n"
      ]
     }
    ],
@@ -236,8 +236,8 @@
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "2021/05/06 01:32:27 - INFO - fine_tune.model.student_bert -   Load model state dict from pre-trained model\n",
-      "2021/05/06 01:32:27 - INFO - fine_tune.model.student_bert -   Finish initialization from pre-trained model\n"
+      "2021/05/07 15:32:25 - INFO - fine_tune.model.student_bert -   Load model state dict from pre-trained model\n",
+      "2021/05/07 15:32:25 - INFO - fine_tune.model.student_bert -   Finish initialization from pre-trained model\n"
      ]
     },
     {
@@ -304,7 +304,7 @@
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "100%|██████████| 67349/67349 [14:48<00:00, 75.83it/s]\n"
+      "100%|██████████| 104743/104743 [24:03<00:00, 72.58it/s]\n"
      ]
     }
    ],
@@ -361,7 +361,7 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "56007"
+       "59225"
       ]
      },
      "metadata": {},
@@ -381,7 +381,7 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "2097.449907000002"
+       "3262.0112490000033"
       ]
      },
      "metadata": {},
